# flow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  clean-graph-nodes.md  resq-flow.md  trace-improvements.md  trace-validation-queries.md
.github/workflows/: ci.yml  release.yml
archive/: README.md
cli/: package.json  tsconfig.json
cli/src/: index.ts  types.ts
cli/src/__tests__/: filters.test.ts  history.test.ts  integration-logs-list.test.ts  integration-logs-tail.test.ts  integration-runs-explain.test.ts  integration-status.test.ts  logs-emit.test.ts  logs-list.test.ts  logs-tail.test.ts  runs-explain.test.ts  smoke.test.ts  status.test.ts  ws.test.ts
cli/src/commands/: logs.ts  runs.ts  status.ts
cli/src/lib/: config.ts  errors.ts  explain.ts  filters.ts  history.ts  http.ts  ws.ts  (+2 more)
docs/: adding-a-flow.md  cli.md  flow-event-contract.md  production-deployment.md  release-artifacts.md  shared-flow-event-contract.md
examples/vector/: resq-flow-fanout.yaml
jrodocs/: RUNS-SPEC.md  add-run-id.md  refactor-drawer.md  resq-flow-language-spec.md  skills-refactor.md
jrodocs/ui-refactor/: PLAN-codex-ui-foundation.md
relay/: Cargo.toml
relay/src/: contracts.rs  error.rs  flow_definitions.rs  health.rs  history.rs  ingest.rs  lib.rs  main.rs  models.rs  paths.rs  ws.rs
relay/tests/: capabilities.rs  filtering.rs  flow_definitions.rs  history.rs  ingest_health.rs  otlp_logs.rs  otlp_to_ws.rs  static_ui.rs  ws_broadcast.rs
relay/tests/common/: mod.rs
scripts/: install-hooks.sh  package-release.sh
skills/: README.md
skills/flow-cli-create/: SKILL.md
skills/flow-cli-read/: SKILL.md
skills/flow-cli-write/: SKILL.md
ui/: .oxfmtrc.jsonc  .oxlintrc.json  DESIGN-SYSTEM.md  drawer-refactor.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+149 files in other folders)
