[package]
name = "resq-flow-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3"
