[package]
name = "resq-flow-relay"
version = "0.1.1"
edition = "2024"

[profile.release]
overflow-checks = true
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
axum = { version = "0.8", features = ["ws", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages", "trace", "logs", "with-serde"] }
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
futures-util = "0.3"
temp-env = { version = "0.3.6", features = ["async_closure"] }

[lints.rust]
unsafe_code = "deny"
dead_code = "warn"

[lints.clippy]
string_slice = "deny"
